--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
             </a>
           </div>
 
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 col-sm-12">
+                <h2>About/關於摩迪高</h2>
+                <p>台灣摩迪高工程股份公司由新加坡multico母公司投資,
+                    於2003年3月1日 開始營業, 2013年歡慶10週年. 主要代理英國
+                    Perkins原廠引擎及相關零件備品; 2010年取得美國ITW GSE
+                    航空地面勤務支援設備台灣總代理; 2012年8月取得美國Bobcat 台灣總代理, 並將陸續增加附屬相關工程等業務。
+                    </p>
+                    <button type="button" class="btn btn-primary">MORE</button>
+              </div>
+              <div class="col-md-6 col-sm-12">
+                <img src="http://taiwanmultico.com.tw/images/aboutimg.png" alt="">
+              </div>
+            </div>
+          </div>
+            
+
           <footer>
                 <nav><img class="logo" src="img/logo.jpg" alt="摩迪高 LGOO"/>
                   <div class="link"><a href="#">最新消息</a><a href="#">產品介紹</a><a href="#">聯絡我們</a></div>
