--- a/index.html
+++ b/index.html
@@ -90,12 +90,23 @@
               </div>
             </div>
           </div>
-            
+            <section id="brands">
+              <h1>如果您有任何問題或需求，歡迎來電洽詢</h1>
+              <p>或留下您的聯絡資料以及您所要諮詢的問題，我們將在最短的時間內由專人與您聯絡。</p>
+              <button type="button" class="btn btn-primary">聯繫表單</button>
+
+            </section>
 
           <footer>
                 <nav><img class="logo" src="img/logo.jpg" alt="摩迪高 LGOO"/>
-                  <div class="link"><a href="#">最新消息</a><a href="#">產品介紹</a><a href="#">聯絡我們</a></div>
-                  <div id="copy">Copyright &copy; 2019 摩迪高. All rights reserved            </div>
+                  <div class="link">
+                    <a href="#">最新消息</a>
+                    <a href="#">產品介紹</a>
+                    <a href="#">聯絡我們</a>
+                  </div>
+                  <div id="copy">Copyright &copy; 2019 摩迪高. All rights reserved            
+                  </div>
+
                 </nav>
               </footer>
 
