關於我完成

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <!-- <nav><a herf="#"><img class="logo" src="img/logo.jpg" alt="摩迪高 LOGO"/></a> -->
                 <!-- </li> -->
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">首頁 <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/index.html">首頁 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">產品</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">關於我們</a>
+                    <a class="nav-link" href="/about.html">關於我們</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">聯絡我們</a>
@@ -91,7 +91,7 @@
             </div>
           </div>
             <section id="brands">
-              <h1>如果您有任何問題或需求，歡迎來電洽詢</h1>
+              <h1>如果您有任何問題或需求，歡迎<font color="red" >來電洽詢</font></h1>
               <p>或留下您的聯絡資料以及您所要諮詢的問題，我們將在最短的時間內由專人與您聯絡。</p>
               <button type="button" class="btn btn-primary">聯繫表單</button>
 
