--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
                         <a class="nav-link" href="/index.html">首頁 <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">產品</a>
+                        <a class="nav-link" href="product.html">產品</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about.html">關於我們</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">聯絡我們</a>
+                        <a class="nav-link" href="contact.html">聯絡我們</a>
                     </li>
 
 
@@ -96,9 +96,10 @@
         <footer>
             <nav><img class="logo" src="img/logo.jpg" alt="摩迪高 LGOO" />
                 <div class="link">
-                    <a href="#">最新消息</a>
-                    <a href="#">產品介紹</a>
-                    <a href="#">聯絡我們</a>
+                    <a href="/index.html">首頁</a>
+                    <a href="/product.html">產品介紹</a>
+                    <a href="/about.html">關於我們</a>
+                    <a href="/contact.html">聯絡我們</a>
                 </div>
                 <div id="copy">Copyright &copy; 2019 摩迪高. All rights reserved
                 </div>
