--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     <!-- <nav><a herf="#"><img class="logo" src="img/logo.jpg" alt="摩迪高 LOGO"/></a> -->
                 <!-- </li> -->
                 <li class="nav-item ">
-                    <a class="nav-link" href="/index.html">首頁 <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/index.html">首頁 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">產品</a>
+                    <a class="nav-link" href="product.html">產品</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/about.html">關於我們</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">聯絡我們</a>
+                    <a class="nav-link" href="contact.html">聯絡我們</a>
                 </li>
                 
                 
@@ -83,7 +83,7 @@
                     Perkins原廠引擎及相關零件備品; 2010年取得美國ITW GSE
                     航空地面勤務支援設備台灣總代理; 2012年8月取得美國Bobcat 台灣總代理, 並將陸續增加附屬相關工程等業務。
                     </p>
-                    <button type="button" class="btn btn-primary">MORE</button>
+                    <button type="button" class="btn btn-primary" onclick="location.href='about.html'">MORE</button>
               </div>
               <div class="col-md-6 col-sm-12">
                 <img src="http://taiwanmultico.com.tw/images/aboutimg.png" alt="">
@@ -93,16 +93,17 @@
             <section id="brands">
               <h1>如果您有任何問題或需求，歡迎<font color="red" >來電洽詢</font></h1>
               <p>或留下您的聯絡資料以及您所要諮詢的問題，我們將在最短的時間內由專人與您聯絡。</p>
-              <button type="button" class="btn btn-primary">聯繫表單</button>
+              <button type="button" class="btn btn-primary" onclick="location.href='contact.html'">聯繫表單</button>
 
             </section>
 
           <footer>
                 <nav><img class="logo" src="img/logo.jpg" alt="摩迪高 LGOO"/>
                   <div class="link">
-                    <a href="#">最新消息</a>
-                    <a href="#">產品介紹</a>
-                    <a href="#">聯絡我們</a>
+                    <a href="/index.html">首頁</a>
+                    <a href="/product.html">產品介紹</a>
+                    <a href="/about.html">關於我們</a>
+                    <a href="/contact.html">聯絡我們</a>
                   </div>
                   <div id="copy">Copyright &copy; 2019 摩迪高. All rights reserved            
                   </div>
